# ImgToPdfConverter

./: .gitignore  .gitmodules
.github/workflows/: build.yml
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/ImgToPdfConverter/: CMakeLists.txt  FileListWidget.cpp  FileListWidget.h  FileListWidget.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_pch.h
src/App/ImgToPdfConverter/Models/: settingsinfo.cpp  settingsinfo.h
src/App/ImgToPdfConverter/mac/: Info.plist.in
